[gd_scene load_steps=7 format=3 uid="uid://dedximpv4svw3"]

[ext_resource type="Script" uid="uid://dn6ombex5iusn" path="res://Scripts/Cena1/menu_principal.gd" id="1_gko4s"]
[ext_resource type="Texture2D" uid="uid://b0eo4bypq0olq" path="res://Assets/Cena1 (place holders)/MiniBackground.png" id="2_62ey3"]
[ext_resource type="Texture2D" uid="uid://dhqgncb18e3gx" path="res://Assets/MenuPrincipal/Desenho_2.png" id="2_ft0r1"]
[ext_resource type="Texture2D" uid="uid://bcq6w8wbwjf2m" path="res://Assets/MenuPrincipal/Desenho_2_3.png" id="3_62ey3"]
[ext_resource type="Texture2D" uid="uid://doiq6cy5jui22" path="res://Assets/MenuPrincipal/logo.png" id="5_aq7tg"]
[ext_resource type="Texture2D" uid="uid://c3vdktdaxa7s6" path="res://Assets/Cena1/YOU_ESCAPED.png" id="6_aq7tg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gko4s")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(959.187, 542.688)
scale = Vector2(7.6895, 4.3335)
texture = ExtResource("2_62ey3")

[node name="Desenho2" type="Sprite2D" parent="."]
position = Vector2(1304.62, 408)
scale = Vector2(0.256739, 0.256739)
texture = ExtResource("2_ft0r1")

[node name="Play" type="Button" parent="Desenho2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1015.12
offset_top = -296.751
offset_right = -1014.12
offset_bottom = -288.751
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
flat = true
metadata/_edit_use_anchors_ = true

[node name="Desenho23" type="Sprite2D" parent="."]
position = Vector2(1305, 663)
scale = Vector2(0.256356, 0.256359)
texture = ExtResource("3_62ey3")

[node name="Quit" type="Button" parent="Desenho23"]
anchors_preset = -1
anchor_top = 0.0302135
anchor_right = 1.0
anchor_bottom = 0.998909
offset_left = -1014.0
offset_top = -298.373
offset_right = -1008.0
offset_bottom = -282.373
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
flat = true
metadata/_edit_use_anchors_ = true

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(517, 539)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("5_aq7tg")

[node name="Background2" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(373, 1176)
scale = Vector2(3.99238, 5.88333)
texture = ExtResource("6_aq7tg")

[connection signal="mouse_entered" from="Desenho2/Play" to="." method="change_cursor_hand_detail"]
[connection signal="mouse_exited" from="Desenho2/Play" to="." method="change_cursor_back_detail"]
[connection signal="pressed" from="Desenho2/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Desenho23/Quit" to="." method="change_cursor_hand_detail"]
[connection signal="mouse_exited" from="Desenho23/Quit" to="." method="change_cursor_back_detail"]
[connection signal="pressed" from="Desenho23/Quit" to="." method="_on_quit_pressed"]
